k8s/word-processor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-processor-service
spec:
  selector:
    matchLabels:
      app: word-processor-service
  template:
    metadata:
      labels:
        app: word-processor-service
    spec:
      containers:
      - name: word-processor-service
        image: easygoinglife/word-processor-service:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: word-processor-service
spec:
  selector:
    app: word-processor-service
  ports:
  - port: 80
    targetPort: 8082
    protocol: TCP
